@@ -24,6 +24,7 @@ Version 1.0.10 (March xxth 2013)
 - Implemented: Windows, if user has NO admin rights, the domoticz database will be created in %ProgramData%\Domoticz folder
 - Implemented: Windows, no longer need admin rights
 - Fixed: Baro meter did not show on the dashboard under weather
+- Fixed: Only TFA UV sensor will now report a temperature
 
 Version 1.0.9 (February 17th 2013)
 - Implemented: OWL113 option to display in Ampere/Usage
